backend/manual/06_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ns-backend
  labels:
    app: demo-backend
    env: dev
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
        app: demo-backend
        env: dev
  template:
    metadata:
      labels:
        app: demo-backend 
        env: dev
    spec:
      containers:
        - name: demo-backend
          image: rrquispea/backend-colors:1.0.0 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-config
              mountPath: /config               # Aquí montamos los application.properties
              readOnly: true
          # Probes (requieren actuator)
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            # 2s * 60 = hasta 120s para arrancar. Ajusta si necesitas más.
            periodSeconds: 5
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
      volumes:
        - name: app-config
          configMap:
            name: backend-cm
            # Mapea el archivo del ConfigMap al directorio /config
            items:
              - key: application.properties
                path: application.properties
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values: ["worker01"]
