backend/manual/04_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: ns-backend
  labels:
    env: dev
spec:
  type: ClusterIP
  selector:
    app: demo-backend
    env: dev
  ports:
    - name: http
      port: 80          # puerto del Service
      targetPort: 8080  # puerto del container en tu Deployment
